testdata/baselines/reference/submodule/conformance/typedefCrossModule.errors.txt
mod3.js(6,1): error TS2304: Cannot find name 'exports'.
use.js(1,29): error TS2694: Namespace '"mod1"' has no exported member 'Both'.
use.js(3,29): error TS2694: Namespace '"mod2"' has no exported member 'Both'.
use.js(5,29): error TS2694: Namespace '"mod3"' has no exported member 'Both'.


==== commonjs.d.ts (0 errors) ====
    declare var module: { exports: any};
==== mod1.js (0 errors) ====
    /// <reference path="./commonjs.d.ts"/>
    /** @typedef {{ type: "a", x: 1 }} A */
    /** @typedef {{ type: "b", y: 1 }} B */
    /** @typedef {A | B} Both */
    module.exports = C
    function C() {
        this.p = 1
    }
    
==== mod2.js (0 errors) ====
    /// <reference path="./commonjs.d.ts"/>
    /** @typedef {{ type: "a", x: 1 }} A */
    /** @typedef {{ type: "b", y: 1 }} B */
    /** @typedef {A | B} Both */
    
    export function C() {
        this.p = 1
    }
    
==== mod3.js (1 errors) ====
    /// <reference path="./commonjs.d.ts"/>
    /** @typedef {{ type: "a", x: 1 }} A */
    /** @typedef {{ type: "b", y: 1 }} B */
    /** @typedef {A | B} Both */
    
    exports.C = function() {
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        this.p = 1
    }
    
==== use.js (3 errors) ====
    /** @type {import('./mod1').Both} */
                                ~~~~
!!! error TS2694: Namespace '"mod1"' has no exported member 'Both'.
    var both1 = { type: 'a', x: 1 };
    /** @type {import('./mod2').Both} */
                                ~~~~
!!! error TS2694: Namespace '"mod2"' has no exported member 'Both'.
    var both2 = both1;
    /** @type {import('./mod3').Both} */
                                ~~~~
!!! error TS2694: Namespace '"mod3"' has no exported member 'Both'.
    var both3 = both2;
    
    
    